--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
   "license": "MIT",
   "devDependencies": {
     "@types/react": "^16.9.49",
+    "@zeit/next-sass": "^1.0.1",
+    "node-sass": "^4.14.1",
     "typescript": "^4.0.2"
   }
 }
